--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -42,5 +42,10 @@
       "providerPlugin": "awscloudformation",
       "service": "Cognito"
     }
+  },
+  "storage": {
+    "imagestorage": {
+      "dependsOn": []
+    }
   }
 }
