--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -18,7 +18,7 @@
     }
   },
   "auth": {
-    "testapp32d71ec4": {
+    "amplifyreactappe19a1c8f": {
       "customAuth": false,
       "dependsOn": [],
       "frontendAuthConfig": {
